html and css code added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,43 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <header>
+        <h1>My Favorite Movies</h1>
+    </header>
+
+    <main>
+        <!-- form container -->
+        <div id="form-container">
+            <div>
+                <label for="title">Title: </label>
+                <input type="text" name="title" id="title" placeholder="Movie Title">
+            </div>
+            
+            <div>
+                <label for="rating">Rating: </label>
+                <input type="number" name="rating" id="rating" placeholder="Rate the movie from 0 to 10" min="0" max="10">
+            </div>
+
+            <button id="add-movie">Add Movie</button>
+        </div>
+
+        <!-- Table Container -->
+        <div id="table-container">
+            <table>
+                <tr>
+                    <th style="width: 70%;">Title</th>
+                    <th>Rating</th>
+                    <th>Delete</th>
+                </tr>
+                <tr>
+                    <td>Intersteller</td>
+                    <td>10</td>
+                    <td><button id="delete">Delete</button></td>
+                </tr>
+            </table>
+        </div>
+    </main>
     
     <script src="./script.js"></script>
 </body>
