jQuery code added, to add movie and delete it

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <tr>
                     <td>Intersteller</td>
                     <td>10</td>
-                    <td><button id="delete">Delete</button></td>
+                    <td><button class="delete">Delete</button></td>
                 </tr>
             </table>
         </div>
