sorting movies feature added

--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@
         <div id="table-container">
             <table>
                 <tr>
-                    <th style="width: 70%;">Title</th>
-                    <th>Rating</th>
+                    <th style="width: 70%;">Title
+                        <div id="sort-div">
+                            <i class="arrow up" id="sort-title-asc"></i>
+                            <i class="arrow down" id="sort-title-des"></i>
+                        </div>
+                    </th>
+                    <th>Rating
+                        <div id="sort-div">
+                            <i class="arrow up" id="sort-rating-asc"></i>
+                            <i class="arrow down" id="sort-rating-des"></i>
+                        </div>
+                    </th>
                     <th>Delete</th>
-                </tr>
-                <tr>
-                    <td>Intersteller</td>
-                    <td>10</td>
-                    <td><button class="delete">Delete</button></td>
                 </tr>
             </table>
         </div>
